# vulkan-visbuff

./: .clang  .gitignore  CMakeLists.txt  README.md
assets/shaders/: g_shade.frag  g_shade.vert  g_store.frag  g_store.vert  skybox.frag  skybox.vert  tonemapping.frag  tonemapping.vert  tonemapping_visbuff.frag  vis_shade.frag  vis_shade.vert  vis_shade_amd.frag  vis_store_amd.frag  vis_store_amd.vert
base/include/: base_system.h  camera.h  camera_controller.h  crc.h  eastl_streams.h  framebuffer.h  frustum.h  input_manager.h  light.h  lights_manager.h  log.h  logger.hpp  material.h  material_constants.h  material_instance.h  material_manager.h  material_parameters.h  material_texture_type.h  mesh.h  meshes_heap.h  meshes_heap_manager.h  model.h  model_manager.h  renderer_type.h  renderpass.h  scene.h  shutdown_dtor.h  subpass.h  uncopyable.h  vertex_setup.h  viewport.h  vulkan_base.h  vulkan_buffer.h  vulkan_device.h  vulkan_image.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_texture_manager.h  vulkan_tools.h  vulkan_uniform_buffer.h
base/source/: base_system.cpp  camera.cpp  camera_controller.cpp  crc.cpp  eastl_opnew.cpp  eastl_streams.cpp  eastl_strings.cpp  framebuffer.cpp  frustum.cpp  input_manager.cpp  lights_manager.cpp  log.cpp  material.cpp  material_constants.cpp  material_instance.cpp  material_manager.cpp  material_parameters.cpp  mesh.cpp  meshes_heap.cpp  meshes_heap_manager.cpp  model.cpp  model_manager.cpp  renderpass.cpp  scene.cpp  shutdown_dtor.cpp  subpass.cpp  vertex_setup.cpp  vulkan_base.cpp  vulkan_buffer.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_texture_manager.cpp  vulkan_tools.cpp  vulkan_uniform_data.cpp
deferred/include/: deferred_renderer.h  deferred_scene.h
deferred/source/: deferred_renderer.cpp  deferred_scene.cpp  main.cpp
include/: spv_utils.h
source/opt/: passes.h
unit_tests/: CMakeLists.txt  catch_main.cpp
unit_tests/sample_spv_modules/: test.frag.spv
visbuff/include/: deferred_renderer.h  renderer.h  visbuff_scene.h
visbuff/source/: main.cpp  renderer.cpp  visbuff_scene.cpp
